--- a/Accounting Software/appsettings.Development.json
+++ b/Accounting Software/appsettings.Development.json
@@ -1,12 +1,11 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=title;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "Default": "Data Source=accounting.db"
+  }
 }
